--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "mongoose": "^8.2.2",
     "mongoose-unique-validator": "^5.0.0",
     "multer": "^1.4.5-lts.1"
+  },
+  "devDependencies": {
+    "dotenv": "^16.4.5"
   }
 }
